Implementando consultas de pagamento
